# beancount-aib

./: .coveragerc  README.md  justfile  pyproject.toml
beancount_aib/: categorizer.py  categorizer_test.py  conftest.py  extractors.py  extractors_test.py  helpers.py  helpers_test.py  importer.py  importer_hook.py  importer_test.py
src/beancount_aib/: __init__.py  categorizer.py  extractors.py  importer.py
tests/: categorizer_test.py  importer_test.py
