[project]
name = "beancount-aib"
version = "0.1.0"
description = "Beancount importer for CSVs exported by AIB"
authors = [{ name = "Jakub Turski", email = "yacoob@ftml.net" }]
dependencies = [
  "beancount ~=2.3",
  "beancount-tx-cleanup ~=0.1",
  "beancount-stubs @ git+https://github.com/jmgilman/beancount-stubs@6ef330f",
]
readme = "README.md"
requires-python = "~=3.10"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/beancount_aib"]

[tool.rye]
managed = true
dev-dependencies = ["pytest~=8.2", "pytest-cov~=5.0", "basedpyright~=1.15.1"]
