[project]
name = "beancount-aib"
version = "0.2.0"
description = "Beancount importer for CSVs exported by AIB"
readme = "README.md"
authors = [{ name = "Jakub Turski", email = "yacoob@ftml.net" }]
requires-python = ">=3.11"
dependencies = [
  "beancount>=3.0",
  "beancount-tx-cleanup>=0.2",
  "beangulp>=0.2.0",
]

[project.urls]
Repository = "https://github.com/yacoob/beancount-aib"

[dependency-groups]
dev = ["basedpyright>=1.34.0", "pytest>=9.0.1", "pytest-cov>=7.0.0"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
